add javafx for linux and small updates